update components list page

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -5,7 +5,7 @@ nav:
   - Home: index.md
     # - Quick Start: quick_start.md
     # - Wiring Guide: wiring.md
-  - Parts List: components.md
+  - Components List: components.md
   - Assembly Guide: assembly.md
     # - Software Installation and Test Guide: software.md
     # - Data Collection Guide: collect_data.md
