--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -11,9 +11,9 @@ nav:
   - Mode Indicator: led.md
   - Pilot Configurations: configs.md
     # - Software Installation and Test Guide: software.md
-    # - Data Collection Guide: collect_data.md
-    # - Autopilot Training Guide: train.md
-    # - Autopilot Deployment Guide: deploy.md
+  - Data Collection Guide: data.md
+  - Autopilot Training Guide: learn.md
+  - Autopilot Deployment Guide: autopilot.md
   # - API Reference: api.md
 
 theme:
